--- a/ProjecTrail/View/ProjectDetailPage.xaml
+++ b/ProjecTrail/View/ProjectDetailPage.xaml
@@ -4,24 +4,40 @@
              x:Class="ProjecTrail.View.ProjectDetailPage"
              Title="Projektdetails">
 
-    <ScrollView>
-        <StackLayout Padding="20">
-            <Label Text="Projektname" FontSize="Medium"/>
-            <Entry x:Name="NameEntry" Text="{Binding Project.Name}" />
+    <StackLayout Margin="20, 0, 20, 20">
+        <ScrollView>
+            <StackLayout Padding="20">
+                <Label Text="Projektname" FontSize="Medium"/>
+                <Entry x:Name="NameEntry" Text="{Binding Project.Name}" />
 
-            <Label Text="Beschreibung" FontSize="Medium"/>
-            <Editor x:Name="DescriptionEditor" Text="{Binding Project.Beschreibung}" />
+                <Label Text="Beschreibung" FontSize="Medium"/>
+                <Editor x:Name="DescriptionEditor" Text="{Binding Project.Beschreibung}" />
+                
+                <Label Text="Notizen" FontSize="Medium"/>
+                <Editor x:Name="NotizenEditor" Text="{Binding Project.Notizen}"/>
 
-            <Label Text="Kostenstelle" FontSize="Medium"/>
-            <Entry x:Name="KostenstelleEntry" Text="{Binding Project.Kostenstelle}" />
+                <Label Text="Kostenstelle" FontSize="Medium"/>
+                <Entry x:Name="KostenstelleEntry" Text="{Binding Project.Kostenstelle}" />
 
-            <Label Text="Erstelldatum" FontSize="Medium"/>
-            <Label Text="{Binding Project.Erstelldatum}" />
+                <Label Text="Aufgaben" FontSize="Medium"/>
+                <CollectionView ItemsSource="{Binding Aufgaben}">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <StackLayout Orientation="Horizontal">
+                                <CheckBox IsChecked="{Binding IsCompleted}" />
+                                <Label Text="{Binding Name}" VerticalOptions="Center" />
+                            </StackLayout>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+                <Line/>
+                <Label Text="Erstelldatum" FontSize="Medium"/>
+                <Label Text="{Binding Project.Erstelldatum}" />
+            </StackLayout>
+        </ScrollView>
 
-            <!-- Hier können Sie weitere Felder für die Bearbeitung hinzufügen -->
+        <!-- Hier können Sie weitere Felder für die Bearbeitung hinzufügen -->
+        <Button Text="Änderungen speichern" Command="{Binding SaveCommand}" />
 
-            <Button Text="Änderungen speichern" Command="{Binding SaveCommand}" />
-
-        </StackLayout>
-    </ScrollView>
+    </StackLayout>
 </ContentPage>
